<resources>
    <string name="app_name">My Events</string>

    <!-- LoginFragment -->
    <string name="user_text">User</string>
    <string name="password_text">Password</string>
    <string name="sign_in_text">Sign In</string>
    <string name="register_text">Register</string>

    <!-- UserFragment -->
    <string name="user_name_text">Name</string>
    <string name="lastname_text">Lastname</string>
    <string name="phone_text">Phone</string>
    <string name="email_text">Email</string>

    <!-- EventFragment -->
    <string name="event_name_text">Name Event</string>
    <string name="place_text">Place</string>
    <string name="date_text">Date</string>
    <string name="time_text">Time</string>
    <string name="date_default_text">mm / dd / yyyy</string>
    <string name="time_default_text">- - : - -</string>
    <string name="details_subtitle">Details</string>
    <string name="save_changes_button">Save changes</string>

    <!-- Messages -->
    <string name="auth_failed_message">Authentication failed!</string>
    <string name="user_not_created_message">User creation failed, try again</string>
    <string name="user_created_message">You are registered now!</string>
    <string name="event_created_message">Event created</string>
    <string name="empty_string_message">Your email or password is empty</string>
    <string name="fields_required_message">All fields are required!</string>
    <string name="session_finalized_message">Session finalized!</string>
    <string name="database_error_message">Problem with Firebase</string>

    <!-- Menu -->
    <string name="sign_out_menu">Sign out</string>
    <string name="add_event_menu">Add event</string>

    <!-- Event item -->
    <string name="title_item">Title</string>
    <string name="subtitle_item">Subtitle</string>
</resources>
